--- a/app/view/index.html
+++ b/app/view/index.html
@@ -7,7 +7,7 @@
     <body>
         <div>
             <div class='center'>
-                <div class='title'>DEMO YOUR ML MODEL</div>
+                <div class='title'>Music Genre Classification - Epidemic Sound</div>
                 <div class='content'>
                     <div class='no-display'>
                         <input id='file-input'
